SERVER-61003 ReadConcernMajorityNotAvailableYet errors from ShardRegistry must be retried